--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ body {
     overflow: hidden;
 }
 
-.container .card div img {
+.container .card div picture img {
     max-width: 100%;
 }
 
@@ -82,7 +82,7 @@ body {
     font-family: 'Fraunces', serif;
     color: var(--secondColor-darkBlue);
     font-weight: bold;
-    font-size: 35px;
+    font-size: 30px;
     line-height: 1em;
 }
 
@@ -142,7 +142,7 @@ body {
         justify-content: space-between;
     }
 
-    .container .card div img {
+    .container .card div picture img {
         object-fit: cover;
         width: 100%;
         max-height: 350px;
